<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="#da0c0c"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/novayapozitsiya"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et"
        android:hint="@string/nazvanie"
        android:textColorHint="@color/gray"
        android:textColor="@color/black"
        android:maxLength="30"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"/>

    <EditText

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittextamounSportpit"
        android:hint="@string/kolichestvo"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et3"
        android:hint="@string/tsenazayed"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etzakupka"
        android:hint="@string/tsenazakup"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:inputType="numberDecimal"
        android:maxLength="7"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etsrokgodnosti"
        android:hint="@string/srokgodnosti"
        android:maxLength="30"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edittext"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textSize="20sp"
            android:text="@string/ok"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/btncn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/otmena"
            android:textSize="20sp"
            android:textColor="#ffffffff" />



    </LinearLayout>
</LinearLayout>