<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:textSize="35dp"
        android:gravity="center"
        android:textColor="#da0c0c"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/obnovittsenu"/>


    <EditText
        android:id="@+id/edittextNewPrice"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:background="@drawable/edittext"
        android:hint="@string/novayatsena"
        android:inputType="numberDecimal"
        android:maxLength="7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnokNewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textSize="20sp"
            android:text="@string/ok"
            android:textColor="#ffffffff" />

        <Button
            android:id="@+id/btncnNewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/otmena"
            android:textSize="20sp"
            android:textColor="#ffffffff" />


    </LinearLayout>


</LinearLayout>