<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/toolbarMy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8F621F"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/numberPosition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="№"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal">

            </TextView>

            <TextView
                android:id="@+id/nameItem"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="5"
                android:gravity="center_vertical"
                android:text="@string/nazvanie"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal">

            </TextView>

            <TextView
                android:id="@+id/priceOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/tsena"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal">

            </TextView>

            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/kolvo"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal">

            </TextView>

            <TextView
                android:id="@+id/priceAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/summa"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="normal">

            </TextView>

        </LinearLayout>


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.3"
            android:background="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
            app:layout_constraintStart_toStartOf="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="parent">

        </ImageView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/buttonBackList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbarMy"
            app:layout_constraintWidth_percent="0.2"
            tools:ignore="NestedWeights" />


        <ImageButton
            android:id="@+id/buttonAddList"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:background="@drawable/floatbutton"
            android:elevation="8dp"
            android:src="@drawable/plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageButton
            android:id="@+id/buttonBackList"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:background="@drawable/floatbutton"
            android:elevation="8dp"
            android:src="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonAddList"
            app:layout_constraintStart_toEndOf="@+id/buttonExit" />

        <ImageButton
            android:id="@+id/buttonExit"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="bottom|right"
            android:layout_margin="20dp"
            android:background="@android:color/transparent"
            android:elevation="8dp"
            android:src="@drawable/exit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>