<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:alpha="0.3"
                    android:background="@drawable/bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                </ImageView>
                <TextView
                    android:id="@+id/textViewTittleDetail"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/backgrounwhite"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </TextView>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/backgrounwhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewTittleDetail">

                    <TextView
                        android:id="@+id/textView1Detail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:text="@string/vnalichii"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/textViewAmountDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:gravity="center"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="20dp"
                        android:text="10"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                    </TextView>

                    <TextView
                        android:id="@+id/textView2Detail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:text="@string/tsenazavse"
                        android:textColor="#F30000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView1Detail">
                    </TextView>

                    <TextView
                        android:id="@+id/textViewAllZakupka"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:gravity="center"
                        android:text="@string/tsenazakup"
                        android:textColor="#F30000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2Detail">
                    </TextView>

                    <TextView
                        android:id="@+id/textViewPriceAllDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:layout_marginEnd="40dp"
                        android:text="10"
                        android:layout_marginTop="20dp"
                        android:textColor="#FF5722"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAmountDetail">

                    </TextView>

                    <TextView
                        android:id="@+id/textViewPriceAllDetailzakupka"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:layout_marginEnd="40dp"
                        android:text="10"
                        android:layout_marginTop="20dp"
                        android:textColor="#FF5722"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPriceAllDetail">

                    </TextView>

                    <TextView
                        android:id="@+id/textView3Detail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="@string/tsenazaed"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewAllZakupka">

                    </TextView>
                    <TextView
                        android:id="@+id/textViewPriceForOneZakupka"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="@string/tsenazaedinitsuzakupka"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3Detail">

                    </TextView>

                    <TextView
                        android:id="@+id/textViewSrokGodnosti"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="@string/srokgodnosti"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPriceForOneZakupka">

                    </TextView>

                    <TextView
                        android:id="@+id/textViewPriceOneDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="10"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPriceAllDetailzakupka">

                    </TextView>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="bottom"
                        android:text="@string/red"
                        android:textColor="#FF0000"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textViewPriceOneDetail"
                        app:layout_constraintEnd_toStartOf="@+id/textViewPriceOneDetail"
                        app:layout_constraintTop_toTopOf="@+id/textViewPriceOneDetail">

                    </TextView>



                    <TextView
                        android:id="@+id/textViewPriceOneDetailzakupka"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="10"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPriceOneDetail">

                    </TextView>

                    <TextView
                        android:id="@+id/textViewsrok"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="10"
                        android:layout_marginEnd="40dp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewPriceOneDetailzakupka">

                    </TextView>

                    <TextView
                        android:id="@+id/textView4Detail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:text="@string/dobavleno"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textViewSrokGodnosti">
                    </TextView>
                    <TextView
                        android:id="@+id/textViewDateDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/backgrounwhite"
                        android:gravity="center"
                        android:textColor="#FF0000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4Detail">

                    </TextView>


                    <ImageView
                        android:id="@+id/buttonAddDetail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="50dp"
                        android:background="@drawable/floatbutton"
                        android:elevation="8dp"
                        android:src="@drawable/ic_plus1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <ImageView
                        android:id="@+id/buttonMinusDetail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="50dp"
                        android:background="@drawable/floatbutton"
                        android:elevation="8dp"
                        android:src="@drawable/minus1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buttonAddDetail"
                        app:layout_constraintStart_toEndOf="@+id/buttonBackToListFromDetail" />

                    <ImageView
                        android:id="@+id/buttonBackToListFromDetail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom|right"
                        android:layout_margin="50dp"
                        android:padding="5dp"
                        android:background="@drawable/floatbutton"
                        android:elevation="8dp"
                        android:src="@drawable/back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>


    </ScrollView>


</layout>